Bug 1384631 - Make SystemGroup::Dispatch work early during startup, when it hasn't been initialized yet. r=billm

MozReview-Commit-ID: 4VUmmXPXor6